<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/courier_id"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:width="100dip"
        android:visibility="gone" />

    <TextView
        android:id="@+id/courier_name"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:width="100dip"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/email_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/courier_email"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:width="100dip"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/phone_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/courier_phone"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:width="100dip"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/birth_date_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/courier_birth_date"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:width="100dip"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>